--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,14 @@
 syntax: glob
 
+*~
+\#*\#
 *.o
 *.la
-*.so*
-*~
+*.lo
+#*.so*
+*.mod
 *.pyc
+*.tar.gz
 .hg
 .deps
 .libs
@@ -24,14 +28,21 @@ config.sub
 configure
 depcomp
 install-sh
+libtool
 ltmain.sh
 missing
-stamp-h1
+stamp-h*
 utils/build
 build
 m4/l*.m4
 
 src/ninja/ninja_config.h
+examples/4photons
+examples/6photons
+examples/simple_higher_rank_test
+examples/simple_test
+examples/ttbarh
+examples/thread_6photons
 run*.sh
 
 
