--- a/.hgignore
+++ b/.hgignore
@@ -9,6 +9,7 @@ syntax: glob
 *.mod
 *.pyc
 *.tar.gz
+.DS_Store
 .hg
 .deps
 .libs
@@ -37,13 +38,21 @@ build
 m4/l*.m4
 
 src/ninja/ninja_config.h
+run*.sh
+
+# ignore executables of the examples and files generated with
+# NinjaNumGen
 examples/4photons
 examples/6photons
 examples/simple_higher_rank_test
 examples/simple_test
 examples/ttbarh
 examples/thread_6photons
-run*.sh
+examples/4photons_num.cc
+examples/6photons_num.cc
+examples/mynumhr.cc
+examples/mynum.cc
+examples/ttbarh_num.cc
 
 
 syntax: regexp
