--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
 EXAMPLES = simple_test simple_higher_rank_test 4photons 6photons ttbarh
 
-THREADEXAMPLES = thread_6photons
+THREADEXAMPLES = thread_6photons thread_4photons
 
 EXTRA_PROGRAMS =  $(EXAMPLES) $(THREADEXAMPLES)
 
@@ -15,6 +15,7 @@ simple_higher_rank_test_SOURCES = simple_higher_rank_test.cc mynumhr.cc
 4photons_SOURCES = 4photons.cc 4photons_num.cc 4photons_init.cc
 6photons_SOURCES = 6photons.cc 6photons_num.cc 6photons_init.cc
 thread_6photons_SOURCES = thread_6photons.cc 6photons_num.cc 6photons_init.cc
+thread_4photons_SOURCES = thread_4photons.cc 4photons_num.cc 4photons_init.cc
 ttbarh_SOURCES = ttbarh.cc ttbarh_num.cc ttbarh_init.cc
 
 noinst_HEADERS = mynum.hh mynumhr.hh 4photons_num.hh 6photons_num.hh \
@@ -37,6 +38,9 @@ simple_higher_rank_test_CPPFLAGS = $(OTHEREXAMPLESCPPFLAGS)
 
 thread_6photons_LDADD = $(OTHEREXAMPLESLDADD) $(PTHREAD_CFLAGS) $(PTHREAD_LIBS)
 thread_6photons_CXXFLAGS = $(OTHEREXAMPLESCPPFLAGS) $(PTHREAD_CFLAGS)
+
+thread_4photons_LDADD = $(OTHEREXAMPLESLDADD) $(PTHREAD_CFLAGS) $(PTHREAD_LIBS)
+thread_4photons_CXXFLAGS = $(OTHEREXAMPLESCPPFLAGS) $(PTHREAD_CFLAGS)
 
 ttbarh_LDADD = $(OTHEREXAMPLESLDADD)
 ttbarh_CPPFLAGS = $(OTHEREXAMPLESCPPFLAGS)
