--- a/.hgignore
+++ b/.hgignore
@@ -48,6 +48,7 @@ examples/simple_higher_rank_test
 examples/simple_test
 examples/ttbarh
 examples/thread_6photons
+examples/thread_4photons
 
 
 syntax: regexp
