--- a/.hgignore
+++ b/.hgignore
@@ -53,6 +53,8 @@ examples/simple_test
 examples/ttbarh
 examples/thread_6photons
 examples/thread_4photons
+examples/tensor_test
+examples/tensor_higher_rank_test
 
 
 syntax: regexp
