--- a/src/ninja/ninja_config.h.in
+++ b/src/ninja/ninja_config.h.in
@@ -1,5 +1,5 @@
 
-/* Define to 1 if ninja is compile in quadruple precision. */
+/* Define to 1 if ninja is compiled in quadruple precision. */
 #ifndef NINJA_QUADRUPLE
 #undef NINJA_QUADRUPLE
 #endif
@@ -12,4 +12,9 @@
 /* Define if you have OneLoop. */
 #ifndef NINJA_USE_ONELOOP
 #undef NINJA_USE_ONELOOP
+#endif
+
+/* Define to 1 if quadninja is compiled. */
+#ifndef QUADNINJA
+#undef QUADNINJA
 #endif
