Increase version number to v1.1.0, add ninja-config executable, add VERSION file, replace old REAMDE with README.md, update PACKAGE_DESCRIPTION

--- a/.hgignore
+++ b/.hgignore
@@ -59,5 +59,7 @@ examples/tensor_test
 examples/tensor_higher_rank_test
 examples/quadninja_test
 
+# ignore other generated executables
+src/ninja-config
 
 syntax: regexp
